HelloUltraviolet/Fixtures/RejectedSource/Parallelism/BarrierOutsideGpuContext/Source/Main.uv
//! Rejected structured-parallelism specimen for GPU barriers outside GPU context.

public procedure barrierOutsideGpuContextReference() -> () {
    gpu_barrier()
}
